--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,15 @@
 # Test binary, built with `go test -c`
 *.test
 
+# Ignore Credential files
+.yml
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Ignore local builds
+*.exe
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
+Connections*/
